chore: changed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-# Виртуальное окружение
 .venv/
 venv/
 .env
-
-# Кэш Python
 __pycache__/
 *.py[cod]
-
-# Конфиги IDE
 .idea/
 *.swp
-
-# Системные файлы
 .DS_Store
+.vscode/
+.vscode
