--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==5.0.1
 asyncpg==0.30.0
+bcrypt==4.3.0
 click==8.2.1
 exceptiongroup==1.3.0
 fastapi==0.115.13
@@ -11,8 +12,11 @@ h11==0.16.0
 idna==3.10
 Mako==1.3.10
 MarkupSafe==3.0.2
+passlib==1.7.4
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
