--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,26 @@ annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==5.0.1
 asyncpg==0.30.0
-bcrypt==4.3.0
+bcrypt==3.2.2
+cffi==1.17.1
 click==8.2.1
+dnspython==2.7.0
+email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.115.13
 greenlet==3.2.3
 h11==0.16.0
 idna==3.10
+Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 passlib==1.7.4
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+python-multipart==0.0.20
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
