--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+PyJWT==2.10.1
 python-dotenv==1.1.1
 python-multipart==0.0.20
 sniffio==1.3.1
