--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bcrypt==3.2.2
 cffi==1.17.1
 click==8.2.1
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.115.13
@@ -17,13 +18,17 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 passlib==1.7.4
+pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
